--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- bloc-0-navigation -->
       <div id="bloc-0" class="bloc bgc-white l-bloc">
         <div class="container bloc-sm">
-          <div class="navbar row">
+          <div class="navbar row" aria-label="Main navigation">
             <div class="navbar-header">
               <a class="navbar-brand" href="index.html">
                 <img src="img/agence-la-panthere-monochrome.svg" alt="Agence La Panthère" height="40" />
@@ -61,8 +61,8 @@
                 Agence La Panthère
               </h1>
               <div class="text-center">
-                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-                  id="cta-hero">Contact</a>
+                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero"
+                  aria-pressed="Contacter l'équipe">Contact</a>
               </div>
             </div>
           </div>
@@ -158,7 +158,8 @@
                 ensemble pour créer des sites beaux et bien structurés, qui
                 seront facilement trouvables sur les moteurs de recherche.
               </p>
-              <a class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" href="contact.html">Contactez notre
+              <a class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" href="contact.html"
+                aria-pressed="Contacter l'équipe">Contactez notre
                 équipe</a>
             </div>
           </div>
