--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <!-- bloc-0 -->
     <div class="bloc bgc-white l-bloc" id="bloc-0">
       <div class="container bloc-sm">
-        <nav class="navbar row">
+        <nav class="navbar row" aria-label="Main navigation">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
                 alt="atlanta web design logo" height="40" /></a>
@@ -75,30 +75,31 @@
           <div class="col-sm-6">
             <form id="form_1">
               <div class="form-group">
-                <label for="name">
+                <label for="name" aria-label="Nom">
                   Nom
                 </label>
                 <input id="name" class="form-control" required />
               </div>
               <div class="form-group">
-                <label for="email">
+                <label for="email" aria-label="email">
                   Adresse email
                 </label>
                 <input id="email" class="form-control" type="email" required />
               </div>
               <div class="form-group">
-                <label for="connu">
+                <label for="connu" aria-label="Information">
                   Comment nous avez-vous connu ?
                 </label>
                 <input id="connu" class="form-control" />
               </div>
               <div class="form-group">
-                <label for="message">
+                <label for="message" aria-label="Message">
                   Brief de votre projet (Ajoutez autant de détails que
                   nécessaire)<br /> </label><textarea id="message" class="form-control" rows="4" cols="50"
                   required></textarea>
               </div>
-              <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+              <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit"
+                aria-pressed="Envoyer le formulaire">
                 Envoyer
               </button>
             </form>
