--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                   required></textarea>
               </div>
               <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit"
-                aria-pressed="Envoyer le formulaire">
+                aria-label="Envoyer le formulaire">
                 Envoyer
               </button>
             </form>
