--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </h1>
               <div class="text-center">
                 <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero"
-                  aria-pressed="Contacter l'équipe">Contact</a>
+                  aria-label="Aller à la page de contact">Contact</a>
               </div>
             </div>
           </div>
@@ -159,7 +159,7 @@
                 seront facilement trouvables sur les moteurs de recherche.
               </p>
               <a class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" href="contact.html"
-                aria-pressed="Contacter l'équipe">Contactez notre
+                aria-label="Aller à la page de contact">Contactez notre
                 équipe</a>
             </div>
           </div>
@@ -279,11 +279,11 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-  <script src="./js/jquery-2.1.0.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="./js/blocs.min.js"></script>
+  <script src="./js/jquery-2.1.0.min.js" defer></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
+  <script src="./js/blocs.min.js" defer></script>
   <script src="./js/jquery.touchSwipe.min.js" defer></script>
-  <script src="./js/gmaps.min.js"></script>
+  <script src="./js/gmaps.min.js" defer></script>
 </body>
 
 </html>
