--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- bloc-0-navigation -->
       <div id="bloc-0" class="bloc bgc-white l-bloc">
         <div class="container bloc-sm">
-          <div class="navbar row" aria-label="Main navigation">
+          <div class="navbar row">
             <div class="navbar-header">
               <a class="navbar-brand" href="index.html">
                 <img src="img/agence-la-panthere-monochrome.svg" alt="Agence La Panthère" height="40" />
@@ -61,8 +61,8 @@
                 Agence La Panthère
               </h1>
               <div class="text-center">
-                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero"
-                  aria-label="Aller à la page de contact">Contact</a>
+                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+                  id="cta-hero">Contact</a>
               </div>
             </div>
           </div>
@@ -158,8 +158,7 @@
                 ensemble pour créer des sites beaux et bien structurés, qui
                 seront facilement trouvables sur les moteurs de recherche.
               </p>
-              <a class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" href="contact.html"
-                aria-label="Aller à la page de contact">Contactez notre
+              <a class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" href="contact.html">Contactez notre
                 équipe</a>
             </div>
           </div>
@@ -279,11 +278,11 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-  <script src="./js/jquery-2.1.0.min.js" defer></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
-  <script src="./js/blocs.min.js" defer></script>
+  <script src="./js/jquery-2.1.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="./js/blocs.min.js"></script>
   <script src="./js/jquery.touchSwipe.min.js" defer></script>
-  <script src="./js/gmaps.min.js" defer></script>
+  <script src="./js/gmaps.min.js"></script>
 </body>
 
 </html>
